# novel

./: .dockerignore  .env  .env.env.backup  .env.example  .gitignore  CLIENT_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  PACKAGE_MANIFEST.md  README.md  deploy.bat  deploy.sh  docker-compose.yml  logs.bat  main.py  package.bat  package.sh  pyproject.toml  requirements.txt  restart.bat  stop.bat
app/: __init__.py
app/components/: file_manager.py  input_card.py  model_selector.py
components/: extractors.py  generators.py  llm.py  shorters.py
config/: project_config.py  settings.py
core/workflows/: __init__.py  novel_workflow.py
data/knowledgebase/临时测试/context_documents/: 1-2.txt  1.txt
data/projects/: default.yaml  临时测试.yaml
knowledgebase/临时测试/context_documents/: 测试.txt
llm/: __init__.py
llm/generators/: content_shorter.py  detailed_outline_generator.py  novel_generator.py  outline_generator.py  queries_extractor.py  query_rewriter.py
llm/providers/: __init__.py  base.py
pages/: 1_写作生成.py  2_项目管理.py  3_系统设置.py
projects/: 临时测试.yaml
prompts/: content_shorter.py  novel_generator.py  outline_generator.py  queries_extractor.py
rag/: processors.py  retrievers.py
utils/: export.py  file_utils.py  tools.py
workflows/: novel_wf.py
